remote/argocd/project-automation/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: project-automation
  labels:
    app.kubernetes.io/part-of: project-automation
    pod-security.kubernetes.io/enforce: restricted
    pod-security.kubernetes.io/audit: restricted
    pod-security.kubernetes.io/warn: restricted
